crates/ditto-checker/tests/golden/type-errors/duplicate_type_declaration_constructor.ditto
module Test exports (..)

type SomeType = A 
type SomeOtherType = A  | B
